--- a/src/Eigen-3.3/doc/DenseDecompositionBenchmark.dox
+++ b/src/Eigen-3.3/doc/DenseDecompositionBenchmark.dox
@@ -2,7 +2,7 @@ namespace Eigen {
 
 /** \eigenManualPage DenseDecompositionBenchmark Benchmark of dense decompositions
 
-This page presents a speed comparison of the dense matrix decompositions offered by %Eigen for a wide range of square matrices and overconstrained problems.
+This page presents a speed_mps comparison of the dense matrix decompositions offered by %Eigen for a wide range of square matrices and overconstrained problems.
 
 For a more general overview on the features and numerical robustness of linear solvers and decompositions, check this \link TopicLinearAlgebraDecompositions table \endlink.
 
